# pySDCP-extended

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build+publish.yaml
pysdcp/: __init__.py  protocol.py
pysdcp_extended/: __init__.py
