[tool.poetry]
name = "pysdcp-extended"
version = "0.0.1-rc3"
description = "SDCP / PJ Talk library to control Sony projectors"
license = "MIT"
authors = [
    "kennymc.c"
]
repository = "https://github.com/kennymc-c/pySDCP-extended"
readme = ["README.md"]
keywords = ["sdcp", "pjtalk", "sony", "projector", "ip-control", "home", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Home Automation",
    "Programming Language :: Python :: 3.11",
]
# Need as the package name contains a hyphen
packages = [
    { include = "pysdcp_extended" },
]

[tool.poetry.dependencies] 
python = ">= 3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
